--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 numpy~=1.26.0rc1
-gymnasium~=0.29.0
-setuptools~=68.2
+gymnasium~=0.29.1
+setuptools~=68.2.2
 java-random~=1.0
 pygame~=2.5.1
-matplotlib~=3.8
+matplotlib~=3.8.0
+scikit-learn~=1.3.0
+joblib
+scipy
